<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".fragment.ProfileFragment">

    <!--    <ScrollView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent">-->

    <!--        <LinearLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:orientation="vertical">-->

    <!--            <androidx.cardview.widget.CardView-->
    <!--                android:id="@+id/cvProfile"-->
    <!--                android:layout_width="100dp"-->
    <!--                android:layout_height="100dp"-->
    <!--                android:layout_gravity="center"-->
    <!--                android:layout_marginTop="20dp"-->
    <!--                app:cardCornerRadius="50dp"-->
    <!--                app:cardPreventCornerOverlap="false">-->

    <!--                <ImageView-->
    <!--                    android:id="@+id/imgProfileImage"-->
    <!--                    android:layout_width="100dp"-->
    <!--                    android:layout_height="100dp"-->
    <!--                    android:scaleType="centerCrop"-->
    <!--                    android:src="@drawable/ic_user_photo" />-->
    <!--            </androidx.cardview.widget.CardView>-->

    <!--            <androidx.cardview.widget.CardView-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_gravity="center"-->
    <!--                android:layout_margin="20dp"-->
    <!--                android:elevation="10dp"-->
    <!--                app:cardBackgroundColor="#CBDEF3"-->
    <!--                app:cardCornerRadius="5dp"-->
    <!--                app:cardElevation="10dp">-->

    <!--                <LinearLayout-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:orientation="vertical">-->

    <!--                    <androidx.cardview.widget.CardView-->
    <!--                        android:layout_width="match_parent"-->
    <!--                        android:layout_height="match_parent"-->
    <!--                        android:layout_margin="10dp"-->
    <!--                        app:cardBackgroundColor="#DCF3FF"-->
    <!--                        app:cardCornerRadius="10dp"-->
    <!--                        app:cardElevation="5dp">-->

    <!--                        <TextView-->
    <!--                            android:id="@+id/userName"-->
    <!--                            android:layout_width="match_parent"-->
    <!--                            android:layout_height="wrap_content"-->
    <!--                            android:padding="10dp"-->
    <!--                            android:text="@string/user_name"-->
    <!--                            android:textAlignment="center"-->
    <!--                            android:textSize="15sp"-->
    <!--                            android:textStyle="bold" />-->

    <!--                    </androidx.cardview.widget.CardView>-->

    <!--                    <androidx.cardview.widget.CardView-->
    <!--                        android:layout_width="match_parent"-->
    <!--                        android:layout_height="match_parent"-->
    <!--                        android:layout_marginLeft="10dp"-->
    <!--                        android:layout_marginRight="10dp"-->
    <!--                        android:layout_marginBottom="10dp"-->
    <!--                        app:cardCornerRadius="10dp"-->
    <!--                        app:cardElevation="5dp">-->

    <!--                        <LinearLayout-->
    <!--                            android:layout_width="wrap_content"-->
    <!--                            android:layout_height="wrap_content"-->
    <!--                            android:orientation="vertical">-->

    <!--                            <LinearLayout-->
    <!--                                android:layout_width="match_parent"-->
    <!--                                android:layout_height="wrap_content"-->
    <!--                                android:weightSum="5"-->
    <!--                                android:orientation="horizontal">-->
    <!--                                <TextView-->
    <!--                                    android:layout_width="0dp"-->
    <!--                                    android:layout_weight="1.5"-->
    <!--                                    android:layout_height="wrap_content"-->
    <!--                                    android:padding="7dp"-->
    <!--                                    android:text="Email:"-->
    <!--                                    android:textSize="14.5sp" />-->
    <!--                                <TextView-->
    <!--                                    android:id="@+id/userEmail"-->
    <!--                                    android:layout_width="0dp"-->
    <!--                                    android:layout_weight="3.5"-->
    <!--                                    android:layout_height="wrap_content"-->
    <!--                                    android:padding="7dp"-->
    <!--                                    android:text="@string/username_gmail_com"-->
    <!--                                    android:textSize="14.5sp" />-->
    <!--                            </LinearLayout>-->

    <!--                            <View-->
    <!--                                android:layout_width="match_parent"-->
    <!--                                android:layout_height="2dp"-->
    <!--                                android:background="@color/fragmentHead" />-->

    <!--                            <TextView-->
    <!--                                android:layout_width="match_parent"-->
    <!--                                android:layout_height="wrap_content"-->
    <!--                                android:padding="7dp"-->
    <!--                                android:text="Phone No: +91 8498393983"-->
    <!--                                android:textSize="14.5sp" />-->

    <!--                            <View-->
    <!--                                android:layout_width="match_parent"-->
    <!--                                android:layout_height="2dp"-->
    <!--                                android:background="@color/fragmentHead" />-->

    <!--                            <TextView-->
    <!--                                android:layout_width="match_parent"-->
    <!--                                android:layout_height="wrap_content"-->
    <!--                                android:padding="7dp"-->
    <!--                                android:text="Address: Jakhanian Govind, Ghazipur (Uttar Pradesh"-->
    <!--                                android:textSize="14.5sp" />-->

    <!--                        </LinearLayout>-->
    <!--                    </androidx.cardview.widget.CardView>-->
    <!--                </LinearLayout>-->
    <!--            </androidx.cardview.widget.CardView>-->
    <!--        </LinearLayout>-->
    <!--    </ScrollView>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            app:cardCornerRadius="50dp"
            app:cardPreventCornerOverlap="false">

            <ImageView
                android:id="@+id/imgProfileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_user_photo" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:text="@string/username_gmail_com"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtUserPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/user_phone"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtUserAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/user_address"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>